# epub4j

./: .gitignore  Makefile  README.md  build.gradle.kts  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: ci.yml  native-classifiers.yml  publish.yml
comic4j/: build.gradle.kts
comic4j/src/jmh/java/org/grimmory/comic4j/benchmarks/: PageProcessorBenchmark.java
comic4j/src/main/java/org/grimmory/comic4j/archive/: ArchiveDetector.java  ArchiveFormat.java  CbcReader.java  ComicArchiveReader.java  ComicArchiveWriter.java  ComicProcessingPolicy.java  EntryFilter.java  NaturalSortComparator.java
comic4j/src/main/java/org/grimmory/comic4j/domain/: AgeRating.java  ComicBook.java  ComicInfo.java  ComicPage.java  ImageFormat.java  PageType.java  ReadingDirection.java  YesNo.java
comic4j/src/main/java/org/grimmory/comic4j/error/: ComicError.java  ComicException.java
comic4j/src/main/java/org/grimmory/comic4j/image/: CoverDetector.java  ImageCodec.java  ImageDimensions.java  ImageEntry.java  ImageExtractor.java  ImageProbe.java
comic4j/src/main/java/org/grimmory/comic4j/util/: FilenameEncoding.java  StringSplitter.java
comic4j/src/main/java/org/grimmory/comic4j/xml/: ComicInfoReader.java  ComicInfoWriter.java  SecureXmlParser.java
comic4j/src/test/java/org/grimmory/comic4j/: TestArchiveHelper.java
comic4j/src/test/java/org/grimmory/comic4j/archive/: ArchiveDetectorTest.java  CbcReaderTest.java  ComicArchiveReaderTest.java  ComicArchiveWriterTest.java  ComicProcessingPolicyTest.java  EntryFilterTest.java  NaturalSortComparatorTest.java
comic4j/src/test/java/org/grimmory/comic4j/domain/: AgeRatingTest.java  ImageFormatTest.java  PageTypeTest.java  ReadingDirectionTest.java  YesNoTest.java
comic4j/src/test/java/org/grimmory/comic4j/image/: CoverDetectorTest.java  ImageCodecTest.java  ImageProbeTest.java
comic4j/src/test/java/org/grimmory/comic4j/util/: StringSplitterTest.java
comic4j/src/test/java/org/grimmory/comic4j/xml/: ComicInfoReaderTest.java  ComicInfoWriterTest.java
comic4j/src/test/resources/comicinfo/: comicinfo-full.xml  comicinfo-malformed.xml  comicinfo-minimal.xml  comicinfo-xxe.xml
config/checkstyle/: checkstyle.xml
config/pmd/: ruleset.xml
config/spotbugs/: exclude.xml
epub4j-core/: build.gradle.kts
epub4j-core/src/jmh/java/org/grimmory/epub4j/benchmarks/: EpubReaderBenchmark.java
epub4j-core/src/main/java/org/grimmory/epub4j/: Constants.java
epub4j-core/src/main/java/org/grimmory/epub4j/archive/: ArchiveReader.java  DirectoryEpubContainer.java  EpubContainer.java  EpubContainers.java  FilenameDecoder.java  FilenameValidator.java  ZipEpubContainer.java  ZipLocalHeaderRecovery.java
epub4j-core/src/main/java/org/grimmory/epub4j/browsersupport/: NavigationEvent.java  NavigationEventListener.java  NavigationHistory.java  Navigator.java  package-info.java
epub4j-core/src/main/java/org/grimmory/epub4j/cfi/: CfiConverter.java  CfiExpression.java  CfiParser.java  DocumentNavigator.java  XPointerResult.java
epub4j-core/src/main/java/org/grimmory/epub4j/domain/: Author.java  Book.java  BookMetadata.java  Date.java  EpubBookMetadata.java  EpubResourceProvider.java  Guide.java  GuideReference.java  Identifier.java  LazyResource.java  LazyResourceProvider.java  ManifestItemProperties.java  ManifestItemRefProperties.java  ManifestProperties.java  MediaType.java  MediaTypes.java  Metadata.java  OffHeapResource.java  Relator.java  Resource.java  ResourceInputStream.java  ResourceReference.java  Resources.java  Spine.java  SpineReference.java  TOCReference.java  TableOfContents.java  TitledResourceReference.java
epub4j-core/src/main/java/org/grimmory/epub4j/epub/: BookProcessor.java  BookProcessorPipeline.java  BookRepair.java  CoverDetector.java  DOMUtil.java  EncodingDetector.java  EncodingNormalizer.java  EpubBuilder.java  EpubCheckAdapter.java  EpubDiagnostics.java  EpubErrorCode.java  EpubIntegrityDiagnostics.java  EpubMetadataWriter.java  EpubProcessingPolicy.java  EpubProcessorSupport.java  EpubReader.java  EpubValidationException.java  EpubValidator.java  EpubWriter.java  EpubWriterConfig.java  FilenameMetadataExtractor.java  HtmlProcessor.java  KepubConverter.java  LinkGraphRepair.java  MetadataNormalizer.java  NCXDocument.java  NavDocument.java  NavDocumentReader.java  PackageDocumentBase.java  PackageDocumentMetadataReader.java  PackageDocumentMetadataWriter.java  PackageDocumentReader.java  PackageDocumentWriter.java  ResourceDeduplicator.java  ResourcesLoader.java  SearchReplace.java  SpineManipulator.java  TocSynthesizer.java  WordCountEstimator.java  XhtmlCleaner.java  (+2 more)
epub4j-core/src/main/java/org/grimmory/epub4j/optimize/: CssOptimizer.java  EpubOptimizer.java  FontSubsetter.java  ImageCompressor.java  OptimizationConfig.java  UnusedResourcePruner.java
epub4j-core/src/main/java/org/grimmory/epub4j/util/: CollectionUtil.java  IOUtil.java  KoReaderChecksum.java  MemorySegmentInputStream.java  NoCloseOutputStream.java  NoCloseWriter.java  PathUtils.java  ResourceUtil.java  (+3 more)
epub4j-core/src/test/java/org/grimmory/epub4j/: NamespaceMigrationCoreTest.java
epub4j-core/src/test/resources/: holmes_scandal_bohemia.html  testbook1.epub
epub4j-core/src/test/resources/book1/: chapter1.html
epub4j-core/src/test/resources/opf/: test_calibre_metadata.opf  test_epub3_metadata.opf  test_legacy_series_metadata.opf  test_pagecount_variants.opf
epub4j-native/: .gitignore  README.md  build.gradle.kts
epub4j-native/cpp/: CMakeLists.txt
epub4j-native/cpp/include/: epub_native.h  epub_native_internal.h
epub4j-native/cpp/src/: epub_archive.cpp  epub_encoding.cpp  epub_native.cpp  html_cleaner.cpp  image_processor.cpp  nav_document.cpp  ncx_document.cpp  package_reader.cpp
epub4j-native/java/src/main/resources/linux-x86_64/: native-libs.txt
epub4j-tools/: README.md  build.gradle.kts
epub4j-tools/src/main/groovy/org/grimmory/epub4j/: docbook2epub.groovy
epub4j-tools/src/main/java/org/grimmory/epub4j/: Fileset2Epub.java
epub4j-tools/src/main/java/org/htmlcleaner/: EPUB4JXmlSerializer.java
gradle/: libs.versions.toml
(+129 files in other folders)
